@startuml

title __DEMO's Class Diagram__\n

  namespace  {
    namespace om.example.demo {
      class com.example.demo.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.demo {
      class com.example.demo.HelloController {
      }
    }
  }
  

  namespace  {
    namespace ame {
      abstract class game.Handler {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.LossHendler {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.NegativeHandler {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.PositiveHandler {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Player {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.SlotMachine {
      }
    }
  }
  

  com.example.demo.HelloApplication -up-|> javafx.application.Application
  com.example.demo.HelloController .up.|> javafx.fxml.Initializable
  com.example.demo.HelloController o-- model.Player : player1
  com.example.demo.HelloController o-- model.SlotMachine : slotMachine
  game.Handler o-- game.Handler : processor
  game.LossHendler -up-|> game.Handler
  game.NegativeHandler -up-|> game.Handler
  game.PositiveHandler -up-|> game.Handler
  model.SlotMachine o-- game.Handler : handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
